@@ -2,6 +2,7 @@ Alpha 0.1.8.23
 - Added full support for 1.16's new blocks so you no longer have to manually add them to the whitelist. Thanks, @thedarkonekiller, for the bug report!
 - Permissions now default to OPs again.
 - Removed Spiget in favor of GitHub releases, as Spiget proved to be too unreliable. 
+- Renamed "bigdoors.user" permission node to "bigdoors.user.base", so that "bigdoors.user.*" will include the most important permissions as well.
 
 Alpha 0.1.8.22
 - Abort initialization in certain invalid environments. This can be bypassed, but doing so is NOT SUPPORTED!!
